--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 3.5
+ * @version 3.6
  */
 
  .app-2CXKsg {
@@ -762,6 +762,11 @@
     background-color: #76AAD9;
 }
 
+.active-136ioF .icon-3g7qdA, 
+.hover-3OQb9Y:hover .icon-3g7qdA {
+    color: white;
+}
+
 .after_inlineCode-WydEur, .before_inlineCode-xn8Llh, .inlineCode-2auMQi {
     background: #61A5D8;
 }
@@ -986,7 +991,8 @@
     color: white !important;
 }
 
-.button-3bklZh:hover {
+.button-3bklZh:hover,
+.button-3bklZh.selected-69H4ua {
     background-color: #76AAD9;
 }
 
@@ -1031,7 +1037,14 @@
     background-color: rgba(0,0,0,.25);
 }
 
-.optionalCount-1BzEgg, .optionalHeader-1b1EgJ, .description-1T7FK8, .title-158kHv, .icon-1kx1ir {
+.optionalCount-1BzEgg, .optionalHeader-1b1EgJ, .description-1T7FK8, .title-158kHv {
+    color: white;
+}
+
+.selected-3B2w1z .icon-1kx1ir, 
+.selected-3B2w1z:hover .icon-1kx1ir, 
+#app-mount .icon-1kx1ir,
+.wrapper-1wwiGV:hover .icon-1kx1ir {
     color: white;
 }
 
@@ -1046,15 +1059,13 @@
 .wrapper-1wwiGV:hover {
     background-color: rgba(0,0,0,.15);
 }
-.wrapper-1wwiGV:hover .icon-1kx1ir {
-    color: white;
-}
+
 
 .progress-xNqAjK[style*="background-color: var(--background-modifier-active);"] {
     background-color: #61A5D8 !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: hsl(235, calc(var(--saturation-factor, 1) * 85.6%), 64.7%);"] {
+.progressBar-1T6LYX[style*="background-color: var(--brand-500);"] {
     background-color: #76AAD9 !important;
 }
 
@@ -1279,7 +1290,7 @@
     background-color: transparent;
 }
 
-.connectedAccountContainer-3aLMHJ {
+.connectedAccountContainer-2TWiXT {
     background-color: rgba(97, 165, 216, .32);
     border-radius: 6px;
     border: 1px solid #61A5D8;
@@ -2866,7 +2877,7 @@
 
 /* Newest or Classes That I Have Not Collected Yet */
 .theme-dark .directoryModal-YJsOMv {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .content-3C5Io5 a {
@@ -3004,6 +3015,479 @@
 
 .countContainer-3uQ087 {
     background-color: #61A5D8;
+}
+
+.mulitplePlaceholderUsername-2T3DCI,
+.placeholderAvatar-1qAcRZ,
+.placeholderUsername-3iQi_D,
+.memberGroupsPlaceholder-9tqX9V {
+  background-color: #61a5d8;
+  border-radius: 2px;
+}
+
+.table-17_dGF {
+    background-color: rgba(0,0,0,.6);
+    border-radius: 4px;
+}
+
+.checkboxLabel-3VTAjH {
+    color: white;
+}
+
+.checkboxLabel-3VTAjH a {
+    color: #F8F0C4;
+}
+
+.container-3EBHNg {
+    border-bottom: none;
+}
+
+.contentContainer-BWAau5 {
+    background-color: transparent;
+}
+
+.circle-1g-jMn, 
+.listRowCircle-Yp4XyP {
+  background-color: #61A5D8;
+  border-radius: 30px;
+}
+
+.groupContainer-x_RNHs,
+.backgroundModifierContainer-WjXgb2:hover:not(.disabled-3Q7kTN) {
+  background-color: rgba(0, 0, 0, .4);
+}
+
+.category-3LanTP {
+    background-color: rgba(0,0,0,.4);
+    border-radius: 6px;
+}
+
+.category-3LanTP:hover {
+    background-color: rgba(0,0,0,.6);
+}
+
+.headerContent-1ruWaB, 
+.headerSidebar-q66Sut,
+.separator-3iCpOF {
+    border-bottom: none;
+}
+
+.divider-2-bAb9 {
+    border-top: none;
+}
+
+.card-sX105p,
+.list-1bztb- {
+    background-color: rgba(0,0,0,.4);
+    border-radius: 4px;
+}
+
+.commandName-SDgdgz {
+    background-color: rgba(0,0,0,.7);
+    border: none;
+}
+
+.headerIcon-4CEo5y {
+    border: 7px solid transparent;
+    background-color: transparent;
+}
+
+#app-mount .childButton-3o_dlg {
+    background-color: rgba(0,0,0,.4);
+}
+
+.theme-dark .optionPillKey-2JyeoP {
+    background-color: rgba(0,0,0,.3);
+}
+
+.theme-dark .optionPill-2kmuZR {
+    background-color: rgba(0,0,0,.1);
+    border-color: transparent;
+}
+
+.theme-dark .tierHeaderLocked-30MLlO, 
+.theme-dark .tierHeaderUnlocked-1OpOLf {
+    background-color: rgba(0,0,0,.6);
+}
+
+.theme-dark .tierBody-1d3UiS {
+    background-color: rgba(0,0,0,.3);
+    color: white;
+}
+
+.theme-dark .copyInputDefault-3jiMHw {
+    border-color: transparent;
+}
+
+.copyInput-3AbKWB {
+    background-color: rgba(0,0,0,.6);
+}
+
+.guildFeatureAvailabilityIndicator-1-B8Jv {
+    background-color: rgba(0,0,0,.7);
+}
+
+.featureIcon-3rvFkz {
+    color:  white;
+}
+
+.item-14XeNr,
+.item-4m-12I,
+.item-4m-12I:hover {
+    background-color: #2D2D2D;
+}
+
+.layoutStyle-3d1mjU .item-4m-12I[aria-label="Passthrough"] {
+    color: #FFDB4D;
+}
+
+.passthrough--fbdFR.selected-3jieYB {
+    background-color: #FFDB4D !important;
+    color: black !important;
+}
+
+.deny-2VqAyZ,
+.cross-vHLzBr,
+.deny-1GO6vI {
+    color: #F42626;
+}
+
+.deny-2VqAyZ.selected-I4nkOo,
+.deny-1GO6vI.selected-3jieYB {
+    background-color: #F42626 !important; 
+    color: white;
+}
+
+.allow-q9kwjz,
+.check-3Fp8pO,
+.allow-1h61-Z {
+    color: #3DD828;
+}
+
+.allow-q9kwjz.selected-I4nkOo,
+.allow-1h61-Z.selected-3jieYB {
+    background-color: #3DD828 !important;
+    color: white;
+}
+
+.syncIcon-3lhuwS path {
+    fill: #5AF426;
+}
+
+.perkDescription--074QX a {
+    color: #FFFF90;
+}
+
+.divider-2UxUgG {
+    background: transparent;
+}
+
+.theme-dark .inviteSettingsInviteRow-FAjfDN {
+    box-shadow: none;
+}
+
+
+.theme-dark .perk-19D_HN {
+    background-color: rgba(0,0,0,.4);
+}
+
+.divider-1MSaR9 {
+    background: none;
+}
+
+.theme-dark .barBackground-unEPDT {
+    background-color: transparent;
+}
+
+.barSecondary-VouwoY {
+    background-color: rgba(255,255,255,.12);
+}
+
+.theme-dark .elevationBorderLow-3_3rXL {
+    box-shadow: none;
+}
+
+.theme-dark .popoutList-10IFAa {
+    background: #141414;
+}
+
+.theme-dark .selectableItem-3-fmiM {
+    color: white;
+}
+
+.theme-dark .selectableItem-3-fmiM:focus, 
+.theme-dark .selectableItem-3-fmiM:hover {
+    background-color: rgba(0,0,0,.6);
+}
+
+
+.divider-2JN8Vy {
+    background-color: transparent;
+}
+
+.guildSubscriptionSlots-1i_C21 {
+    background-color: #141414;
+}
+
+
+.guildSubscriptionSlot-1mef6n {
+    border-bottom: none;
+}
+
+.guildSubscriptionDuration-1JI19A, 
+.guildSubscriptionSlotMenuIcon-3UcQXW {
+    color: white;
+}
+
+.cardWrapper-1bSePP {
+    background: #141414;
+}
+
+.theme-dark .gemIndicatorContainer-PqApbX {
+    background-color: transparent;
+}
+
+.circleBackgroundAlt-32_kWx {
+    fill: transparent;
+}
+
+#app-mount .banReasonOtherClickable-8EKPlQ {
+    background-color: rgba(0,0,0,.4);
+    color: white;
+}
+
+.memberRow-1FhJgR:hover,
+.item-2rTrrd:hover {
+    background-color: rgba(255,255,255,.2);
+}
+
+.placeholder-2XdCpg {
+    color: white;
+}
+
+.descriptionBox-SKGNgB {
+    background-color: transparent;
+    border-radius: 3px;
+}
+
+#app-mount .optionContainer-yOpaLq {
+    background: rgba(0,0,0,.15);
+    border-radius: 4px;
+}
+
+.theme-dark .card-3JmxsM {
+    border-color: transparent;
+}
+
+.theme-dark .headerClickable-zGQJz3, 
+.theme-dark .headerDefault-1e6yjj {
+    background-color: rgba(0,0,0,.5);
+    color: white;
+}
+
+.theme-dark .tierBody-3ju-rc {
+    background-color: transparent;
+    color: white;
+}
+
+.featureIcon-2sTnDK {
+    background-color: rgba(255,255,255,.12);
+    border-radius: 7px;
+}
+
+.stickyHeaderElevated-dNSSrJ {
+    box-shadow: none;
+}
+
+.ctaBar-Nhk8yY {
+    background-color: rgba(0,0,0,.6);
+}
+
+.theme-dark .tierMarkerBackground-G8FoN4 {
+    background-color: transparent;
+}
+
+.topic-11NuQZ {
+    color: white;
+}
+
+.topic-11NuQZ a {
+    color: #FFFF90;
+}
+
+.theme-dark .elevationLow-26BbEG {
+    box-shadow: none;
+}
+
+.phoneField-3NAPDv {
+    background-color: rgba(0,0,0,.4);
+    border: none;
+}
+
+.phoneField-3NAPDv .inputField-1iYysB {
+     background-color: transparent;
+     color: white;
+}
+
+.learnMoreLink-2JwgbJ {
+    color: #84E7FF;
+}
+
+.divider-1wnNcY {
+    background-color: transparent;
+}
+
+.guildsSection-30CJxX {
+    border-top: none;
+}
+
+.featureBorder-2G0c_P {
+    border-top: none;
+}
+
+.wrapper-2SplAX {
+    background-color: rgba(0,0,0,.5);
+}
+
+.messagePreviewContainer-1oR1Oc {
+    border: 1px solid black;
+}
+
+.box-2iMsQm {
+    background-color: #181818;
+}
+
+.box-2iMsQm:after {
+    border-top: 10px solid #181818;
+}
+
+.maskBackground-F7QD-A {
+    background-color: rgba(255,255,255,.12);
+}
+
+.containerBackground-Ang24O {
+    background-color: rgba(0,0,0,.6);
+    border: none;
+    box-shadow: none;
+}
+
+.textDivider-34kVsR {
+    background-color: transparent;
+}
+
+.header-11eigE,
+.container-3a5mk- {
+    background-color: #141414;
+}
+
+.tile-2TcwiO {
+    background-color: transparent;
+}
+
+.scrollTierBackground-BnWR8k,
+.modalHeader-3X0A4K {
+    background-color: transparent;
+}
+
+.activityItem-1Z9CTr {
+    background: rgba(0,0,0,.6) !important;
+    box-shadow: none;
+}
+
+.activityTag-3C3YK5 {
+    background-color: #141414;
+    color: white !important;
+}
+
+.sourceThumbnail-ERDcZE {
+    background-color: transparent;
+}
+
+.tile-3POX2m:hover .sourceThumbnail-ERDcZE {
+    box-shadow: inset 0 0 0 2px #61a5d8;
+}
+
+.container-1zzFcN {
+    border-bottom: none;
+}
+
+.text-md-semibold-3xVVGu[style*="color:"] {
+    color: white !important;
+}
+
+.emojiPickerHeader-2mWh2T {
+    background: #141414;
+}
+
+
+.noiseCancellationPopout-2-e5Xz {
+    background: #141414;
+    box-shadow: none;
+}
+
+.noiseCancellationPopout-2-e5Xz a {
+    color: #63F3FD;
+}
+
+#app-mount .participantsButton-1WBdFP {
+    background: #141414;
+    box-shadow: none;
+}
+
+.overlayTitle-2efoIF {
+    border-radius: 4px;
+    background: rgba(0,0,0,.6);
+    color: white;
+}
+
+.status-15kcmy,
+.unreadCount-eHeIkt {
+    color: white;
+    background-color: #61A5D8;
+}
+
+.theme-dark .previewContainer-35LFgt,
+.theme-dark .streamPreview-I7itZ6,
+.container-8Futzw {
+    background-color: #141414;
+}
+
+.container-8Futzw {
+    box-shadow: none;
+}
+
+.channelIcon-3Oew8h,
+.activityVoiceChannel-2vojOH .headerText-3g1XK9 {
+    color: white;
+}
+
+.headerDivider-N-jIGV {
+    background-color: transparent;
+}
+
+.scroller-3b1p7z {
+    background-color: transparent;
+}
+
+.theme-dark .memberListItem-3V-x8Q:not(.popoutDisabled-PP2QdB):hover {
+    background-color: rgba(255,255,255,.13);
+}
+
+.textBlock-3rqvcj a {
+    color: #FFF88D;
+}
+
+.note-3TX9O7 textarea:focus {
+    background-color: rgba(0, 0, 0, .09);
+}
+
+.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
+.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+    border-bottom-color: #EAD2C6;
+}
+
+.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+    border-bottom-color: silver;
 }
 
 /* Main Color */
