"Browse Channels" classes has entered the ring

--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 3.7
+ * @version 3.8
  */
 
  #app-mount .app-2CXKsg {
@@ -4571,4 +4571,102 @@ border-top-color: #9b2742;
 
 .divider-2keupe {
   background: none;
+}
+
+.newPostCount-3SXe5K {
+  background-color: #0e8672;
+  color: white;
+}
+
+.divider-2_8P_2 {
+  color: transparent;
+}
+
+.viewMoreReplies-34u7lq,
+.roleTip-2o2f1b a {
+  color: #ffcc99;
+}
+
+.circle-2tR2Qh {
+  background-color: #0e8672;
+}
+
+.icon-1DBCvl {
+  color: white;
+}
+
+.userPanelInnerThemed-2xZFjl {
+  background: rgba(0, 0, 0, .3);
+}
+
+.metadataContainer-35U-On {
+  background-color: transparent;
+}
+
+.theme-dark .reactorDefault-3GSyaV {
+  box-shadow: none;
+}
+
+.theme-dark .reactionDefault-1Sjj1f:hover {
+  background-color: rgba(255, 255, 255, .1);
+}
+
+.theme-dark .reactionSelected-1aMb2K {
+  background-color: rgba(255, 255, 255, .15);
+}
+
+.theme-dark .textContentFooter-2JnNv8 {
+  background: none;
+}
+
+.contentPreview-3fWiuC {
+  border: 1px solid rgba(255, 255, 255, .2);
+}
+
+.theme-dark .tagPill-1kSbgP {
+  background-color: rgba(255, 255, 255, .2);
+}
+
+.container-1PloNW:hover {
+  background-color: rgba(255, 255, 255, .15);
+}
+
+.theme-dark .body-2rDNbs {
+  color: white;
+}
+
+.theme-dark .contentWarningPopout-WKdbDG {
+  background-color: rgba(0, 0, 0, .6);
+  box-shadow: none;
+}
+
+.theme-dark .footer-2aeMle {
+  background-color: transparent;
+  color: white;
+}
+
+.defaultColor-1EVLSt {
+  color: white;
+}
+
+.theme-dark .container-KM8BU6, 
+.theme-dark .reactors-1VXca7 {
+    background-color: transparent;
+}
+
+.theme-dark .scroller-2GkvCq {
+    background: none;
+}
+
+.theme-dark .modalSubtitle-2lx7qk {
+    border-bottom: none;
+    color: white;
+}
+
+.theme-dark .keyboardShortcutList-3VFAYS .keybindGroup-39HP2U .keybindDescription-oXh6w_ {
+    color: white;
+}
+
+.theme-dark .keyboardShortcutsModal-2CRmCm {
+    background-color: transparent;
 }
